--- a/templates/ajout/index.html.twig
+++ b/templates/ajout/index.html.twig
@@ -17,22 +17,46 @@
     </style>
 
     <div class="example-wrapper">
-        <h1>Hello {{ controller_name }}! ✅</h1>
 
-        {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit">Envoyer</button>
-        {{ form_end(form) }}
+
+        <form id="choix">
+            <p>Selectionnez ce que vous voulez ajouter :</p>
+            <input type="radio" id="Atelier" name="choix" value="atelier">
+            <label for="Atelier">Atelier</label>
+
+            <input type="radio" id="Theme" name="choix" value="theme">
+            <label for="Theme">Theme</label>
+
+            <input type="radio" id="Vacation" name="choix" value="vacation">
+            <label for="Vacation">Vacation</label>
+        </form>
+
+        <div class="atelier" style="display: none;">
+            <p>Ajout atelier</p>
+        {{ form_start(formAtelier) }}
+        {{ form_widget(formAtelier) }}
+        {{ form_end(formAtelier) }}
+        </div>
+
+        <div class="theme" style="display: none;">
+            <p>Ajout theme</p>
+        {{ form_start(formTheme) }}
+        {{ form_widget(formTheme) }}
+        {{ form_end(formTheme) }}
+        </div>
         
-        {% if formEntite is defined %}
-            <p>Renseignez les champs : </p>
-            {{ form_start(formEntite) }}
-            {{ form_widget(formEntite) }}
-            <button type="submit">Envoyer</button>
-            {{ form_end(formEntite) }}
-        {% endif %}
-        
+        <div class="vacation" style="display: none;">
+            <p>Ajout vacation</p>
+        {{ form_start(formVacation) }}
+        {{ form_widget(formVacation) }}
+        {{ form_end(formVacation) }}
+        </div>
+
+
+
+
         {{ dump(_context) }}
 
     </div>
+        <script src="{{ asset('js/ajout.js') }}"></script>
 {% endblock %}
