correction de l'erreur liens manytomany formulaire ajout atelier theme

--- a/templates/ajout/index.html.twig
+++ b/templates/ajout/index.html.twig
@@ -35,6 +35,7 @@
             <p>Ajout atelier</p>
         {{ form_start(formAtelier) }}
         {{ form_widget(formAtelier) }}
+        <input type="submit" value="envoyer">
         {{ form_end(formAtelier) }}
         </div>
 
@@ -42,6 +43,7 @@
             <p>Ajout theme</p>
         {{ form_start(formTheme) }}
         {{ form_widget(formTheme) }}
+        <input type="submit" value="envoyer">
         {{ form_end(formTheme) }}
         </div>
         
@@ -49,6 +51,7 @@
             <p>Ajout vacation</p>
         {{ form_start(formVacation) }}
         {{ form_widget(formVacation) }}
+        <input type="submit" value="envoyer">
         {{ form_end(formVacation) }}
         </div>
 
