--- a/templates/ajout/index.html.twig
+++ b/templates/ajout/index.html.twig
@@ -35,6 +35,7 @@
             <p>Ajout atelier</p>
         {{ form_start(formAtelier) }}
         {{ form_widget(formAtelier) }}
+        <input type="hidden" name="form_type" value="atelier">
         <input type="submit" value="envoyer">
         {{ form_end(formAtelier) }}
         </div>
@@ -43,6 +44,7 @@
             <p>Ajout theme</p>
         {{ form_start(formTheme) }}
         {{ form_widget(formTheme) }}
+        <input type="hidden" name="form_type" value="theme">
         <input type="submit" value="envoyer">
         {{ form_end(formTheme) }}
         </div>
@@ -51,13 +53,11 @@
             <p>Ajout vacation</p>
         {{ form_start(formVacation) }}
         {{ form_widget(formVacation) }}
+        <input type="hidden" name="form_type" value="vacation">
         <input type="submit" value="envoyer">
         {{ form_end(formVacation) }}
         </div>
-
-
-
-
+        
         {{ dump(_context) }}
 
     </div>
