début ajout fonction modifier

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -20,7 +20,7 @@
         <h3>Ateliers</h3>
         
         {% for atelier in ateliers%}
-            <tr><a>{{atelier.libelle}}</a></tr>
+            <tr><a>{{atelier.libelle}} - {{atelier.nbplacesmaxi}} places</a></tr>
         {% endfor%}
         
     </div>
