--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,9 +21,12 @@
                         <a href="/accueil" class="nav-link">Home</a>
                     </li>
                     {%  if app.user  %} 
-                    {%  if app.user.roles == ["ROLE_USER"] or app.user.roles == ["ROLE_ADMIN"]  %} 
+                    {%  if is_granted('ROLE_ADMIN')  %} 
                     <li>
                         <a href="/ajout" class="nav-link">Ajout</a>
+                    </li>
+                    <li>
+                        <a href="/modifier" class="nav-link">Modifier</a>
                     </li>
                     {% endif %}
                 </ul>
