--- a/public/css/accueil.css
+++ b/public/css/accueil.css
@@ -55,3 +55,13 @@
 .menu li {
     margin-bottom: 5px;
 }
+#ateliers {
+  width: 100%; /* Adaptez cette valeur selon vos besoins */
+  border-collapse: collapse; /* Optionnel: pour un affichage plus net des bordures */
+}
+
+#ateliers th, #ateliers td {
+  text-align: center; /* Centrage horizontal */
+  vertical-align: middle; /* Centrage vertical */
+  padding: 8px; /* Optionnel: ajoute un peu d'espace autour du texte dans les cellules */
+}
