--- a/templates/modifier/modifierAtelier.html.twig
+++ b/templates/modifier/modifierAtelier.html.twig
@@ -49,7 +49,7 @@
 
     </style>
     
-    <h1>Vacations de l'atelier {{ atelier.libelle }}</h1>
+    <h1 style='text-align: center;'>Vacations de l'atelier {{ atelier.libelle }}</h1>
     
     <div class="content">
         <table>
