--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -3,23 +3,20 @@
 {% block title %}Inscription au congrès{% endblock %}
 
 {% block body %}
-    <style>
-        
-    </style>
-
+    
     <div class="card-container">
     <div class="card-header">
         <strong>{{ licencie.nom }} {{ licencie.prenom }}</strong>
     </div>
     <ul class="card-content">
-        
+        <li>{{ licencie.idClub.nom }}</li>
         <li>{{ licencie.adresse1 }}</li>
         {% if licencie.adresse2 is not null %}
             <li>{{ licencie.adresse2 }}</li>
         {% endif %}
         <li>{{ licencie.cp }} {{ licencie.ville }}</li>
         <li>{{ licencie.tel }}</li>
-        <li>{{ licencie.mail }}<form action="/changementEmail" method="POST"><input value="{{ licencie.mail }}" style="display: none"> <input type="submit" value="Definir cet email"></form></li>
+        <li>{{ licencie.mail }}<form action="/changementEmail" method="POST"><input value="{{ licencie.mail }}" name="mail" style="display: none"> <input type="submit" value="Definir comme mail du compte"></form></li>
     </ul>
 </div>
 
