demande de confirmation

--- a/templates/ajout/ajoutAtelier.html.twig
+++ b/templates/ajout/ajoutAtelier.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AjoutController!{% endblock %}
+{% block title %}Ajouter{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/style.css') }}">
