--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription au congrès{% endblock %}
 
 {% block body %}
-    
+    <body>
     <div class="card-container">
     <div class="card-header">
         <strong>{{ licencie.nom }} {{ licencie.prenom }}</strong>
@@ -16,8 +16,9 @@
         {% endif %}
         <li>{{ licencie.cp }} {{ licencie.ville }}</li>
         <li>{{ licencie.tel }}</li>
-        <li>{{ licencie.mail }}<form action="/changementEmail" method="POST"><input value="{{ licencie.mail }}" name="mail" style="display: none"> <input type="submit" value="Definir comme mail du compte"></form></li>
+        <li>{{ licencie.mail }}<form action="/changementEmail" method="POST"><input value="{{ licencie.mail }}" name="mail" style="display: none"> <input type="submit" value="Definir comme mail du compte" id="mailconfirm"></form></li>
     </ul>
 </div>
-
+<script src="{{ asset('js/inscriptioncongres.js') }}"></script>
+    </body>
 {% endblock %}
