--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -4,21 +4,32 @@
 
 {% block body %}
     <body>
-    <div class="card-container">
-    <div class="card-header">
-        <strong>{{ licencie.nom }} {{ licencie.prenom }}</strong>
-    </div>
-    <ul class="card-content">
-        <li>{{ licencie.idClub.nom }}</li>
-        <li>{{ licencie.adresse1 }}</li>
-        {% if licencie.adresse2 is not null %}
-            <li>{{ licencie.adresse2 }}</li>
-        {% endif %}
-        <li>{{ licencie.cp }} {{ licencie.ville }}</li>
-        <li>{{ licencie.tel }}</li>
-        <li>{{ licencie.mail }}<form action="/changementEmail" method="POST"><input value="{{ licencie.mail }}" name="mail" style="display: none"> <input type="submit" value="Definir comme mail du compte" id="mailconfirm"></form></li>
-    </ul>
-</div>
-<script src="{{ asset('js/inscriptioncongres.js') }}"></script>
+        <div class="card-container">
+            <div class="card-header">
+                <strong>{{ licencie.nom }} {{ licencie.prenom }}</strong>
+            </div>
+            <ul class="card-content">
+                <li>{{ licencie.idClub.nom }}</li>
+                <li>{{ licencie.adresse1 }}</li>
+                    {% if licencie.adresse2 is not null %}
+                    <li>{{ licencie.adresse2 }}</li>
+                    {% endif %}
+                <li>{{ licencie.cp }} {{ licencie.ville }}</li>
+                <li>{{ licencie.tel }}</li>
+                <li>{{ licencie.mail }}
+                    {% if licencie.mail != username %}
+                        <form id="formemail"><input value="{{ licencie.mail }}" name="mail"  style="display: none"> <input type="submit" value="Definir comme mail du compte" id="mailconfirm"></form>
+                        {% endif %}
+                </li>
+            </ul>
+        </div>
+
+        <div class="inscription">
+            <form>
+
+            </form>
+
+        </div>
+        <script src="{{ asset('js/inscriptioncongres.js') }}"></script>
     </body>
 {% endblock %}
