--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,6 +63,17 @@
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     background-color: #f9f9f9;
 }
+.card-atelier{
+    max-width: 15%;
+    margin-top: 5px;
+    margin-left: 5%;
+    margin-right: 25%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    background-color: #f9f9f9;
+}
 
 .card-header {
     margin-bottom: 20px;
