--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,18 @@
     background-color: #f9f9f9;
 }
 
+.card-nuite{
+    max-width: 20%;
+    margin-top: 5px;
+    margin-left: 5%;
+    margin-right: 25%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    background-color: #f9f9f9;
+}
+
 .card-header {
     margin-bottom: 20px;
     padding-bottom: 10px;
