--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription au congrès{% endblock %}
 
 {% block body %}
-    {{ dump(ateliers) }}
+    {{ dump(_context) }}
     <body>
         <div class="card-container" >
             <div class="card-header">
@@ -35,9 +35,38 @@
                             <div class="card-container card-atelier"><div class="card-header">
                                     <strong>{{ atelier.libelle }}</strong>
                                 </div>
-                                <ul class="card-content"><li>{{ atelier.nbplacesmaxi - atelier.inscriptions|length }} places</li></ul>
+                                <ul class="card-content"><li>{{ atelier.nbplacesmaxi - atelier.inscriptions|length }} places restante</li></ul>
                             </div>
                         </label>
+                    {% endfor %}
+                </div>
+
+                <div id="FormHotels">
+                    <h3>Nuités</h3>
+                    {% for nuite in hotels %}
+
+
+                        <div class="card-nuite"><div class="card-header">
+                                <strong>{{ nuite.hotel.nom }}</strong>
+                            </div>
+                            <ul class="card-content">
+                                <li>{{ nuite.categoriechambre.libellecategorie }}</li>
+                                <li>{{ nuite.tarifnuite }} €</li>
+                                <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-06-09" />
+                                <label>
+                                    06/09/2024
+                                </label>
+                                <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-07-09" />
+                                <label>
+                                    07/09/2024
+                                </label>
+                                <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-08-09" />
+                                <label>
+                                    08/09/2024
+                                </label>
+                            </ul>
+                        </div>
+
                     {% endfor %}
                 </div>
                 <div>
