--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -25,8 +25,8 @@
             </ul>
         </div>
 
-        <div class="inscription">
-            <form action="/commitinscription" method="post">
+        <div class="inscription" >
+            <form action="/commitinscription" id="FormInscription" method="post">
                 <div id="FormAteliers">
                     <h3>Ateliers</h3>
                     {% for atelier in ateliers %}
@@ -72,7 +72,9 @@
                 <div>
 
                 </div>
-                <input type="submit">
+                <button type="button" id="recap">Voir mon inscription</button>
+                
+                <input type="submit" id="commit" style="display: none">
 
             </form>
 
