la selection d'un atelier est obligatoire

--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -69,12 +69,12 @@
 
                     {% endfor %}
                 </div>
-                <div>
+                <div id="SubmitSection">
+                    <button type="button" id="recap">Voir mon inscription</button>
+                    <input type="submit" id="commit" style="display: none">
 
                 </div>
-                <button type="button" id="recap">Voir mon inscription</button>
-                
-                <input type="submit" id="commit" style="display: none">
+
 
             </form>
 
