--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -27,47 +27,49 @@
 
         <div class="inscription" >
             <form action="/commitinscription" id="FormInscription" method="post">
-                <div id="FormAteliers">
-                    <h3>Ateliers</h3>
-                    {% for atelier in ateliers %}
-                        <input type="checkbox" class="radioAtelier" name="ateliers[]" id="{{ atelier.libelle }}" value="{{ atelier.id }}" />
-                        <label for="{{ atelier.libelle }}">
-                            <div class="card-container card-atelier"><div class="card-header">
-                                    <strong>{{ atelier.libelle }}</strong>
+                <div id="FormDiv">
+                    <div id="FormAteliers">
+                        <h3>Ateliers</h3>
+                        {% for atelier in ateliers %}
+                            <input type="checkbox" class="radioAtelier" name="ateliers[]" id="{{ atelier.libelle }}" value="{{ atelier.id }}" />
+                            <label for="{{ atelier.libelle }}">
+                                <div class="card-container card-atelier"><div class="card-header">
+                                        <strong>{{ atelier.libelle }}</strong>
+                                    </div>
+                                    <ul class="card-content"><li>{{ atelier.nbplacesmaxi - atelier.inscriptions|length }} places restante</li></ul>
                                 </div>
-                                <ul class="card-content"><li>{{ atelier.nbplacesmaxi - atelier.inscriptions|length }} places restante</li></ul>
+                            </label>
+                        {% endfor %}
+                    </div>
+
+                    <div id="FormHotels">
+                        <h3>Nuités</h3>
+                        {% for nuite in hotels %}
+
+
+                            <div class="card-nuite"><div class="card-header">
+                                    <strong>{{ nuite.hotel.nom }}</strong>
+                                </div>
+                                <ul class="card-content">
+                                    <li>{{ nuite.categoriechambre.libellecategorie }}</li>
+                                    <li>{{ nuite.tarifnuite }} €</li>
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-06-09" />
+                                    <label>
+                                        06/09/2024
+                                    </label>
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-07-09" />
+                                    <label>
+                                        07/09/2024
+                                    </label>
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-08-09" />
+                                    <label>
+                                        08/09/2024
+                                    </label>
+                                </ul>
                             </div>
-                        </label>
-                    {% endfor %}
-                </div>
 
-                <div id="FormHotels">
-                    <h3>Nuités</h3>
-                    {% for nuite in hotels %}
-
-
-                        <div class="card-nuite"><div class="card-header">
-                                <strong>{{ nuite.hotel.nom }}</strong>
-                            </div>
-                            <ul class="card-content">
-                                <li>{{ nuite.categoriechambre.libellecategorie }}</li>
-                                <li>{{ nuite.tarifnuite }} €</li>
-                                <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-06-09" />
-                                <label>
-                                    06/09/2024
-                                </label>
-                                <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-07-09" />
-                                <label>
-                                    07/09/2024
-                                </label>
-                                <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-08-09" />
-                                <label>
-                                    08/09/2024
-                                </label>
-                            </ul>
-                        </div>
-
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
                 <div id="SubmitSection">
                     <button type="button" id="recap">Voir mon inscription</button>
