--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription au congrès{% endblock %}
 
 {% block body %}
-    {{ dump(_context) }}
+    
     <body>
         <div class="card-container" >
             <div class="card-header">
@@ -53,15 +53,15 @@
                                 <ul class="card-content">
                                     <li>{{ nuite.categoriechambre.libellecategorie }}</li>
                                     <li>{{ nuite.tarifnuite }} €</li>
-                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-06-09" />
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-06-09" />
                                     <label>
                                         06/09/2024
                                     </label>
-                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-07-09" />
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-07-09" />
                                     <label>
                                         07/09/2024
                                     </label>
-                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_2024-08-09" />
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-08-09" />
                                     <label>
                                         08/09/2024
                                     </label>
@@ -69,6 +69,9 @@
                             </div>
 
                         {% endfor %}
+                    </div>
+                    <div id="FormRestauration">
+                        
                     </div>
                 </div>
                 <div id="SubmitSection">
