--- a/templates/inscription_congres/index.html.twig
+++ b/templates/inscription_congres/index.html.twig
@@ -44,7 +44,7 @@
                     </div>
 
                     <div id="FormHotels">
-                        <h3>Nuités</h3>
+                        <h3>Nuités (Facultatif)</h3>
                         {% for nuite in hotels %}
 
 
@@ -54,15 +54,15 @@
                                 <ul class="card-content">
                                     <li>{{ nuite.categoriechambre.libellecategorie }}</li>
                                     <li>{{ nuite.tarifnuite }} €</li>
-                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-06-09" />
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-06-09_{{ nuite.categoriechambre.id }}_{{ nuite.hotel.id }}" />
                                     <label>
                                         06/09/2024
                                     </label>
-                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-07-09" />
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-07-09_{{ nuite.categoriechambre.id }}_{{ nuite.hotel.id }}" />
                                     <label>
                                         07/09/2024
                                     </label>
-                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-08-09" />
+                                    <input type="checkbox" class="radioNuite" name="Nuites[]" id="{{ nuite.id }}" value="{{ nuite.id }}_{{ nuite.hotel.nom }}_{{ nuite.categoriechambre.libellecategorie }}_{{ nuite.tarifnuite }}_2024-08-09_{{ nuite.categoriechambre.id }}_{{ nuite.hotel.id }}" />
                                     <label>
                                         08/09/2024
                                     </label>
@@ -72,7 +72,7 @@
                         {% endfor %}
                     </div>
                     <div id="FormRestauration">
-                        <h3>Restauration</h3>
+                        <h3>Restauration (Facultatif)</h3>
 
                         <div class="card-nuite"><div class="card-header">
                                 <strong>38€ par repas</strong>
@@ -91,14 +91,18 @@
                     </div>
                     <div id="SubmitSection">
                         <button type="button" id="recap">Voir mon inscription</button>
-                        <input type="submit" id="commit" style="display: none">
+
 
                     </div>
+                            
 
 
+
+
+                </div>
+                <input type="submit" id="commit" style="display: none" value="Valider">
             </form>
-
-        </div>
-        <script src="{{ asset('js/inscriptioncongres.js') }}"></script>
+                            <div id="RecapDiv"></div>
+            <script src="{{ asset('js/inscriptioncongres.js') }}"></script>
     </body>
 {% endblock %}
