--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,10 @@
         <link rel="icon" href="favicon.png">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('css/style.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/accueil.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/forms.css') }}">
         {% endblock %}
 
         {% block javascripts %}
@@ -15,45 +18,52 @@
     </head>
     <body>
         {% block navbar %}
-            <nav class="navbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a href="/accueil" class="nav-link">Home</a>
-                    </li>
-                    {%  if app.user  %} 
-                    {%  if is_granted('ROLE_ADMIN')%} 
-                    <li>
-                        <a href="/ajout" class="nav-link">Ajout</a>
-                    </li>
-                    <li>
-                        <a href="/modifier" class="nav-link">Modifier</a>
-                    </li>
-                    {% endif %}
-                    
-                    {%  if is_granted('ROLE_INSCRIT')%} 
-                    <li>
-                        <a href="/inscriptioncongres" class="nav-link">Inscription</a>
-                    </li>
-                    {% endif %}
-                </ul>
-                
-                <ul class="navbar-log">
-                    <li class="log-item">
-                        <a href="/logout" class="nav-link">Se deconnecter</a>
-                    </li>
-                {% else %}
-                    <ul class="navbar-log">
-                    <li class="log-item">
-                        <a href="/logout" class="nav-link">Se connecter</a>
-                    </li>
-                    <li class="log-item">
-                        <a href="/register" class="nav-link">S'inscrire</a>
-                    </li>
-                {% endif %}
-                    
-                </ul>
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightblue;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/accueil ">MDL</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/accueil">Home</a>
+                            </li>
+                            {%  if app.user  %} 
+                                {%  if is_granted('ROLE_ADMIN')%}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/ajout">Ajout</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/modifier">Modifier</a>
+                                    </li>
+                                {% endif %}
+                                {%  if is_granted('ROLE_INSCRIT')%}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/inscriptioncongres">Inscription</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+
+                            <ul class="navbar-log">
+                                <li class="log-item">
+                                    <a href="/logout" class="nav-link">Se deconnecter</a>
+                                </li>
+                            {% else %}
+                                <ul class="navbar-log">
+                                    <li class="log-item">
+                                        <a href="/logout" class="nav-link">Se connecter</a>
+                                    </li>
+                                    <li class="log-item">
+                                        <a href="/register" class="nav-link">S'inscrire</a>
+                                    </li>
+                                {% endif %}
+                            </ul>
+                    </div>
+                </div>
             </nav>
         {% endblock %}
         {% block body %}{% endblock %}
+        {% block bootstrap %}<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>{% endblock %}
     </body>
 </html>
