maj css et ajout banière

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -35,6 +35,8 @@
         {% endfor%}
     </div>
 </div>
-        
+    <div class="banner" style="text-align: center; margin-top: 8%;">
+    <img src="{{ asset('img/fond.jpg') }}">
+    </div>    
             
 {% endblock %}
